syntax = "proto3";

package car;

option go_package = "github.com/dailoi280702/se121/car-service/pkg/car";

import "utils.proto";

service CarService {
  rpc GetCar(GetCarReq) returns (Car);
  rpc CreateCar(CreateCarReq) returns (utils.Empty);
  rpc UpdateCar(UpdateCarReq) returns (utils.Empty);
  rpc DeleteCar(DeleteCarReq) returns (utils.Empty);
  rpc SearchForCar(utils.SearchReq) returns (SearchForCarRes);

  rpc GetBrand(GetBrandReq) returns (Brand);
  rpc CreateBrand(CreateBrandReq) returns (utils.Empty);
  rpc UpdateBrand(UpdateBrandReq) returns (utils.Empty);
  rpc SearchForBrand(utils.SearchReq) returns (SearchForBrandRes);

  rpc GetSeries(GetSeriesReq) returns (Series);
  rpc CreateSeries(CreateSeriesReq) returns (utils.Empty);
  rpc UpdateSeries(UpdateSeriesReq) returns (utils.Empty);
  rpc SearchForSeries(utils.SearchReq) returns (SearchForSeriesRes);

  rpc GetCarMetadata(utils.Empty) returns (GetCarMetadataRes);
}

message Car {
  int32 id = 1;
  optional Brand brand = 2;
  optional Series series = 3;
  string name = 4;
  optional int32 year = 5;
  optional int32 horsePower = 6;
  optional int32 torque = 7;
  optional Transmission transmission = 8;
  optional FuelType fuelType = 9;
  optional string imageUrl = 10;
  optional string review = 11;
}

message Brand {
  int32 id = 1;
  string name = 2;
  optional string countryOfOrigin = 3;
  optional int32 foundedYear = 4;
  optional string websiteUrl = 5;
  optional string logoUrl = 6;
}

message Series {
  int32 id = 1;
  string name = 2;
  int32 brandId = 3;
}

message SeriesDetail {
  int32 id = 1;
  string name = 2;
  Brand brand = 3;
}

message Transmission {
  int32 id = 1;
  string name = 2;
  optional string description = 3;
}

message FuelType {
  int32 id = 1;
  string name = 2;
  optional string description = 3;
}

message GetCarReq {
  int32 id = 1;
}

message CreateCarReq {
  optional int32 brandId = 1;
  optional int32 seriesId = 2;
  string name = 3;
  optional int32 year = 4;
  optional int32 horsePower = 5;
  optional int32 torque = 6;
  optional int32 transmissionId = 7;
  optional int32 fuelTypeId = 8;
  optional string imageUrl = 9;
  optional string review = 10;
}

message UpdateCarReq {
  int32 id = 1;
  optional int32 brandId = 2;
  optional int32 seriesId = 3;
  optional string name = 4;
  optional int32 year = 5;
  optional int32 horsePower = 6;
  optional int32 torque = 7;
  optional int32 transmissionId = 8;
  optional int32 fuelTypeId = 9;
  optional string imageUrl = 10;
  optional string review = 11;
}

message DeleteCarReq {
  int32 id = 1;
}

message GetBrandReq {
  int32 id = 1;
}

message CreateBrandReq {
  string name = 1;
  optional string countryOfOrigin = 2;
  optional int32 foundedYear = 3;
  optional string websiteUrl = 4;
  optional string logoUrl = 5;
}

message UpdateBrandReq {
  int32 id = 1;
  optional string name = 2;
  optional string countryOfOrigin = 3;
  optional int32 foundedYear = 4;
  optional string websiteUrl = 5;
  optional string logoUrl = 6;
}

message GetSeriesReq {
  int32 id = 1;
}

message CreateSeriesReq {
  string name = 1;
  int32 brandId = 2;
}

message UpdateSeriesReq {
  int32 id = 1;
  optional string name = 2;
  optional int32 brandId = 3;
}

message SearchForCarRes {
  repeated Car cars = 1;
  int32 total = 2;
}

message SearchForBrandRes {
  repeated Brand brands = 1;
  int32 total = 2;
}

message SearchForSeriesRes {
  repeated SeriesDetail series = 1;
  int32 total = 2;
}

message GetCarMetadataRes {
  repeated Brand brands = 1;
  repeated Series series = 2;
  repeated FuelType fuelType = 3;
  repeated Transmission transmission = 4;
}
